getting remove guns and updated depens